--- a/templates/home.html
+++ b/templates/home.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home Page</title>
-  <link rel="stylesheet" href="{{url_for('static', filename='estilo.css')}}"}}">
-</head>
-<body>
-  <div id="container">
-    <h1>Carreiras em Python</h1>
-    <img id="banner" src="{{url_for('static', filename='carreira.jpg')}}" alt="carreiras">
-    <h2>Sobre o Site</h2>
-    <p>
+<html lang="en">
+  <head>
+    <meta charset="utf-8"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HomePage</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="container">
+       <h1 class="text-center mt-2 mb-2">Carreiras em Python</h1>
+    <img class="img-fluid" src="{{url_for('static', filename='carreira.jpg')}}"/>
+    <h2 class="text-center mt-2">Sobre o Site</h2>
+    <p class="lead">
+      Aqui terá as informações sobre o site...
+      <br>
+      Enquanto isso vai ter um Lorem Ipsum...
+      <br>
+      <br>
       Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
     </p>
-    <h2>Vagas Abertas</h2>
-    <p>Aqui irá retornar as vagas sobre Python</p>
-    <div style="text-align: center">
-      <button>Entrar em Contato</button>
+    <h2 class="text-center">Vagas abertas</h2>
+    <p>
+      {% for vaga in vagas %}
+        {% include 'includes/vagas_item.html' %}
+      {% endfor %}
+    </p>
+    <div class="text-center">
+      <button class="btn btn-primary btn-lg">Entrar em Contato</button>
     </div>
-  </div>
-</body>
+    </div>
+  </body>
+  <footer>
+    <p>
+      Desenvolvidor por: Marley Paranhos
+    </p>
+  </footer>
 </html>
