Adicionando ação aos botões

--- a/templates/includes/vagas_item.html
+++ b/templates/includes/vagas_item.html
@@ -13,7 +13,7 @@
     </div>
   </div>
   <div class="col-3">
-      <button type="button" class="btn btn-outline-primary">Aplicar</button>
+      <a href="https://wa.me/+5531980139754?text=Olá, fiz uma visita na sua homepage, e estou interessado na vaga de {{vaga.titulo}}, em {{vaga.localidade}}"  type="button" class="btn btn-outline-primary">Aplicar</a>
 
   </div>
 </div>
