--- a/templates/home.html
+++ b/templates/home.html
@@ -8,17 +8,27 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body>
+    {% include 'includes/navbar.html' %}
     <div class="container">
        <h1 class="text-center mt-2 mb-2">Python - Vagas</h1>
     <img class="img-fluid" src="{{url_for('static', filename='carreira.jpg')}}"/>
     <h2 class="text-center mt-2">Sobre o Site</h2>
     <p class="lead">
-      Aqui terá as informações sobre o site...
+      Essa aplicação foi desenvolvida para fins de estudos.
       <br>
-      Enquanto isso vai ter um Lorem Ipsum...
+      Me chamo Marley Paranhos, estou estudando Python e estou aprendendo a criar sites com o framework Flask.
       <br>
+      Aqui desenvolvi a aplicação utilizando Python e Flask.
       <br>
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      Utilizei html, css e bootstrap para desenvolver esse site.
+      <br>
+      As habilidaes utilizadas foram: html, css, bootstrap, python, flask.
+      <br>
+      Os dados são fictícios e não são realizados nenhum tipo de processamento.
+      <br>
+      Os botões de Aplicar tem a ação de enviar uma mensagem no meu WhatsApp, e você poderia colaborar escolhendo sua vaga e clicando no botão.
+      <br>
+      O botão Entrar em Contato é um link para meu Linkedin.
     </p>
     <h2 class="text-center">Vagas abertas</h2>
     <p>
@@ -27,13 +37,9 @@
       {% endfor %}
     </p>
     <div class="text-center">
-      <button class="btn btn-primary btn-lg">Entrar em Contato</button>
+      <a href="https://www.linkedin.com/in/marley-paranhos-aa7b53222/"class="btn btn-primary btn-lg">Entrar em Contato</a>
     </div>
     </div>
+    {% include 'includes/footer.html' %}
   </body>
-  <footer>
-    <p>
-      Desenvolvidor por: Marley Paranhos
-    </p>
-  </footer>
 </html>
