Personalizando a página home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,13 +14,9 @@
     <img class="img-fluid" src="{{url_for('static', filename='carreira.jpg')}}"/>
     <h2 class="text-center mt-2">Sobre o Site</h2>
     <p class="lead">
-      Essa aplicação foi desenvolvida para fins de estudos.
+      Essa aplicação está em fase de desenvolvimento e será para fins de estudos.
       <br>
-      Me chamo Marley Paranhos, estou estudando Python e estou aprendendo a criar sites com o framework Flask.
-      <br>
-      Aqui desenvolvi a aplicação utilizando Python e Flask.
-      <br>
-      Utilizei html, css e bootstrap para desenvolver esse site.
+      Me chamo Marley Paranhos, sou Desenvolvedor Back-end Jr.
       <br>
       As habilidaes utilizadas foram: html, css, bootstrap, python, flask.
       <br>
