Editando a página home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,13 +14,17 @@
     <img class="img-fluid" src="{{url_for('static', filename='carreira.jpg')}}"/>
     <h2 class="text-center mt-2">Sobre o Site</h2>
     <p class="lead">
-      Essa aplicação está em fase de desenvolvimento e será para fins de estudos.
+      Aplicação em fase de desenvolvimento para aprendizado de conhecimentos de Python.
       <br>
       Me chamo Marley Paranhos, sou Desenvolvedor Back-end Jr.
       <br>
-      As habilidaes utilizadas foram: html, css, bootstrap, python, flask.
+      Mais uma conquista alcançada!
       <br>
-      Os dados são fictícios e não são realizados nenhum tipo de processamento.
+      Acabei de fazer meu primeiro deploy na Render com um projeto desenvolvido em HTML, CSS, Bootstrap, Python e Flask.
+      <br>
+      Estou empolgado com cada passo nessa jornada como desenvolvedor Python Jr.
+      <br>
+      Peço a sua colaboração em fazer um teste na minha aplicação pra ver se está funcional.
       <br>
       Os botões de Aplicar tem a ação de enviar uma mensagem no meu WhatsApp, e você poderia colaborar escolhendo sua vaga e clicando no botão.
       <br>
