--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,7 @@
       {% endfor %}
     </p>
     <div class="text-center">
-      <a href="https://www.linkedin.com/in/marley-paranhos-aa7b53222/"class="btn btn-primary btn-lg">Entrar em Contato</a>
+      <a href="https://www.linkedin.com/in/marley-paranhos-aa7b53222/" target="_blank" class="btn btn-primary btn-lg">Entrar em Contato</a>
     </div>
     </div>
     {% include 'includes/footer.html' %}
