--- a/templates/includes/vagas_item.html
+++ b/templates/includes/vagas_item.html
@@ -13,7 +13,7 @@
     </div>
   </div>
   <div class="col-3">
-      <a href="https://wa.me/+5531980139754?text=Olá, fiz uma visita na sua homepage, e estou interessado na vaga de {{vaga.titulo}}, em {{vaga.localidade}}"  type="button" class="btn btn-outline-primary">Aplicar</a>
+      <a href="https://wa.me/+5531980139754?text=Olá, fiz uma visita na sua homepage, e estou interessado na vaga de {{vaga.titulo}}, em {{vaga.localidade}}" target="_blank" type="button" class="btn btn-outline-primary">Aplicar</a>
 
   </div>
 </div>
